# libgen_download

./: .gitignore  LICENSE  README.md  libgen_download.py  libgen_gui.py  pyproject.toml  requirements.txt
.github/workflows/: windows-build.yml
libgen_downloader/: __init__.py  cli.py  config.py  download.py  errors.py  pipeline.py  search.py
libgen_downloader/gui/: __init__.py  __main__.py  dialogs.py  main_window.py  style.py  toast.py  workers.py
